--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MyApplication</string>
+
+    <string name="add_card">添加银行卡</string>
+    <string name="reserved_phonenumber">预留手机号</string>
+    <string name="verification_code">验证码</string>
+    <string name="input_bankcard_code">请输入银行卡号</string>
 </resources>
