--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="reserved_phonenumber">预留手机号</string>
     <string name="verification_code">验证码</string>
     <string name="input_bankcard_code">请输入银行卡号</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
